[package]
name = "tibrs"
version = "0.1.0"
edition = "2021"

[lib]
name = "tibrs"
path = "src/lib.rs"

[[bin]]
name = "tibc"
path = "src/bin.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.13", features = ["derive"] }
hex = "0.4.3"
itertools = "0.12.0"
pest = "2.7.6"
pest_derive = "2.7.6"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
toml = "0.8.8"

[build-dependencies]
itertools = "0.12.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
